[tool.poetry]
name = "nandok"
version = "0.1.0"
description = ""
authors = ["4masaka <in9lude@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
